; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/32x/extr_draw.c_PicoDrawSetOutFormat32x.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/32x/extr_draw.c_PicoDrawSetOutFormat32x.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8* }

@PDF_RGB555 = common dso_local global i64 0, align 8
@PDM32X_OFF = common dso_local global i32 0, align 4
@Pico32xDrawMode = common dso_local global i32 0, align 4
@PicoDraw2FB = common dso_local global i32* null, align 8
@PDM32X_32X_ONLY = common dso_local global i32 0, align 4
@PDM32X_BOTH = common dso_local global i32 0, align 4
@Pico32xMem = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PicoDrawSetOutFormat32x(i64 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i64, i64* %3, align 8
  %6 = load i64, i64* @PDF_RGB555, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %14

8:                                                ; preds = %2
  %9 = load i32, i32* %4, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %8
  %12 = call i32 @PicoDrawSetInternalBuf(i32* null, i32 0)
  %13 = load i32, i32* @PDM32X_OFF, align 4
  store i32 %13, i32* @Pico32xDrawMode, align 4
  br label %26

14:                                               ; preds = %8, %2
  %15 = load i32*, i32** @PicoDraw2FB, align 8
  %16 = call i32 @PicoDrawSetInternalBuf(i32* %15, i32 328)
  %17 = load i64, i64* %3, align 8
  %18 = load i64, i64* @PDF_RGB555, align 8
  %19 = icmp eq i64 %17, %18
  br i1 %19, label %20, label %22

20:                                               ; preds = %14
  %21 = load i32, i32* @PDM32X_32X_ONLY, align 4
  br label %24

22:                                               ; preds = %14
  %23 = load i32, i32* @PDM32X_BOTH, align 4
  br label %24

24:                                               ; preds = %22, %20
  %25 = phi i32 [ %21, %20 ], [ %23, %22 ]
  store i32 %25, i32* @Pico32xDrawMode, align 4
  br label %26

26:                                               ; preds = %24, %11
  ret void
}

declare dso_local i32 @PicoDrawSetInternalBuf(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
